tests/helpers/kub8Response/ingress/create-dryrun-fail.json
[
    {
        "scope": "https://0c839694b0426bf3afe0aceae6c821ef.yl4.ap-south-1.eks.amazonaws.com:443",
        "method": "POST",
        "path": "/apis/networking.k8s.io/v1/namespaces/default/ingresses?dryRun=All",
        "body": {
          "apiVersion": "networking.k8s.io/v1",
          "kind": "Ingress",
          "metadata": {
            "annotations": {
              "cert-manager.io/cluster-issuer": "letsencrypt-prod-ingress"
            },
            "name": "recorder3",
            "namespace": "default"
          },
          "spec": {
            "ingressClassName": "nginx",
            "rules": [
              {
                "host": "recorder3.steercampaign.net",
                "http": {
                  "paths": [
                    {
                      "backend": {
                        "service": {
                          "name": "recorder3",
                          "port": {
                            "number": 8025
                          }
                        }
                      },
                      "path": "/mailhog",
                      "pathType": "Prefix"                  
                    },    
                    {
                      "backend": {
                        "service": {
                          "name": "recorder3",
                          "port": {
                            "number": 80
                          }
                        }
                      },
                      "path": "/",
                      "pathType": "ImplementationSpecific"
                    }
                  ]
                }
              }
            ],
            "tls": [
              {
                "hosts": [
                  "recorder3.steercampaign.net"
                ],
                "secretName": "recorder3"
              }
            ]
          },
          "status": {
            "loadBalancer": {
              "ingress": [
                {
                  "hostname": "a3461fa5d8eef423fb86d3e0caee5863-1139071525.ap-south-1.elb.amazonaws.com"
                }
              ]
            }
          }
        },
        "status": 409,
        "response": {
          "kind": "Status",
          "apiVersion": "v1",
          "metadata": {},
          "status": "Failure",
          "message": "ingresses.networking.k8s.io \"recorder3\" already exists",
          "reason": "AlreadyExists",
          "details": {
            "name": "recorder3",
            "group": "networking.k8s.io",
            "kind": "ingresses"
          },
          "code": 409
        },
        "rawHeaders": [
          "Audit-Id",
          "396da003-2274-46bb-946a-15785ff4807c",
          "Cache-Control",
          "no-cache, private",
          "Content-Type",
          "application/json",
          "X-Kubernetes-Pf-Flowschema-Uid",
          "f38e6ebc-c935-435d-8cfb-7a9e8a84e650",
          "X-Kubernetes-Pf-Prioritylevel-Uid",
          "884d598b-afa7-41c0-aac9-5ed69379cf52",
          "Date",
          "Tue, 13 Sep 2022 20:23:05 GMT",
          "Content-Length",
          "910",
          "Connection",
          "close"
        ],
        "responseIsBinary": false
      }    
]
