tests/helpers/kub8Response/ingress/create-success-setDomain.json
[{
    "scope": "https://0c839694b0426bf3afe0aceae6c821ef.yl4.ap-south-1.eks.amazonaws.com:443",
    "method": "PATCH",
    "path": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/recorder3",
    "body": {
      "apiVersion": "networking.k8s.io/v1",
      "kind": "Ingress",
      "metadata": {
        "name": "recorder3",
        "namespace": "default",
        "annotations": {
          "cert-manager.io/cluster-issuer": "letsencrypt-prod-ingress"
        }
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {
              "hostname": "a3461fa5d8eef423fb86d3e0caee5863-1139071525.ap-south-1.elb.amazonaws.com"
            }
          ]
        }
      },
      "spec": {
        "ingressClassName": "nginx",
        "tls": [
          {
            "hosts": [
              "domain.com",
              "recorder3.steercampaign.net"
            ],
            "secretName": "recorder3"
          }
        ],
        "rules": [
          {
            "host": "domain.com",
            "http": {
              "paths": [
                {
                  "path": "/",
                  "pathType": "ImplementationSpecific",
                  "backend": {
                    "service": {
                      "name": "recorder3",
                      "port": {
                        "number": 80
                      }
                    }
                  }
                }
              ]
            }
          },
          {
            "host": "recorder3.steercampaign.net",
            "http": {
              "paths": [
                {
                  "path": "/",
                  "pathType": "ImplementationSpecific",
                  "backend": {
                    "service": {
                      "name": "recorder3",
                      "port": {
                        "number": 80
                      }
                    }
                  }
                }
              ]
            }
          }
        ]
      }
    },
    "status": 200,
    "response": {
      "kind": "Ingress",
      "apiVersion": "networking.k8s.io/v1",
      "metadata": {
        "name": "recorder3",
        "namespace": "default",
        "uid": "303a768c-d162-43b7-a6bc-df27f1b1ad67",
        "resourceVersion": "16451332",
        "generation": 2,
        "creationTimestamp": "2022-09-14T10:03:44Z",
        "annotations": {
          "cert-manager.io/cluster-issuer": "letsencrypt-prod-ingress"
        },
        "managedFields": [
          {
            "manager": "unknown",
            "operation": "Update",
            "apiVersion": "networking.k8s.io/v1",
            "time": "2022-09-14T10:03:44Z",
            "fieldsType": "FieldsV1",
            "fieldsV1": {
              "f:metadata": {
                "f:annotations": {
                  ".": {},
                  "f:cert-manager.io/cluster-issuer": {}
                }
              },
              "f:spec": {
                "f:ingressClassName": {},
                "f:rules": {},
                "f:tls": {}
              }
            }
          },
          {
            "manager": "nginx-ingress-controller",
            "operation": "Update",
            "apiVersion": "networking.k8s.io/v1",
            "time": "2022-09-14T10:03:45Z",
            "fieldsType": "FieldsV1",
            "fieldsV1": {
              "f:status": {
                "f:loadBalancer": {
                  "f:ingress": {}
                }
              }
            }
          }
        ]
      },
      "spec": {
        "ingressClassName": "nginx",
        "tls": [
          {
            "hosts": [
              "domain.com",
              "recorder3.steercampaign.net"
            ],
            "secretName": "recorder3"
          }
        ],
        "rules": [
          {
            "host": "domain.com",
            "http": {
              "paths": [
                {
                  "path": "/",
                  "pathType": "ImplementationSpecific",
                  "backend": {
                    "service": {
                      "name": "recorder3",
                      "port": {
                        "number": 80
                      }
                    }
                  }
                }
              ]
            }
          },
          {
            "host": "recorder3.steercampaign.net",
            "http": {
              "paths": [
                {
                  "path": "/",
                  "pathType": "ImplementationSpecific",
                  "backend": {
                    "service": {
                      "name": "recorder3",
                      "port": {
                        "number": 80
                      }
                    }
                  }
                }
              ]
            }
          }
        ]
      },
      "status": {
        "loadBalancer": {
          "ingress": [
            {
              "hostname": "a3461fa5d8eef423fb86d3e0caee5863-1139071525.ap-south-1.elb.amazonaws.com"
            }
          ]
        }
      }
    },
    "rawHeaders": [
      "Audit-Id",
      "602e226d-9bb0-46a7-8728-3188191214db",
      "Cache-Control",
      "no-cache, private",
      "Content-Type",
      "application/json",
      "X-Kubernetes-Pf-Flowschema-Uid",
      "f38e6ebc-c935-435d-8cfb-7a9e8a84e650",
      "X-Kubernetes-Pf-Prioritylevel-Uid",
      "884d598b-afa7-41c0-aac9-5ed69379cf52",
      "Date",
      "Wed, 14 Sep 2022 12:24:04 GMT",
      "Content-Length",
      "1415",
      "Connection",
      "close"
    ],
    "responseIsBinary": false
  }]
